# ChangeLog for media-plugins/grilo-plugins
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.44 2014/11/10 10:24:08 pacho Exp $

  10 Nov 2014; Pacho Ramos <pacho@gentoo.org> grilo-plugins-0.2.13.ebuild:
  Needs newer grilo (upstream bug #739159)

  25 Sep 2014; Pacho Ramos <pacho@gentoo.org> grilo-plugins-0.2.13.ebuild:
  Needs to be rebuilt with libgdata .so version updates, drop old

*grilo-plugins-0.2.13 (02 Sep 2014)

  02 Sep 2014; Pacho Ramos <pacho@gentoo.org> +grilo-plugins-0.2.13.ebuild,
  -grilo-plugins-0.2.10.ebuild, metadata.xml:
  Version bump, drop old

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> grilo-plugins-0.2.12.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> grilo-plugins-0.2.12.ebuild:
  Stable for amd64, wrt bug #512912

*grilo-plugins-0.2.12 (27 Apr 2014)

  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org>
  +grilo-plugins-0.2.12.ebuild:
  Version bump for Gnome 3.12.

  25 Apr 2014; Pacho Ramos <pacho@gentoo.org> -grilo-plugins-0.1.20.ebuild,
  -grilo-plugins-0.2.9.ebuild:
  Drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> grilo-plugins-0.2.10.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> grilo-plugins-0.2.10.ebuild:
  amd64 stable, bug 499954

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> grilo-plugins-0.1.20.ebuild,
  grilo-plugins-0.2.10.ebuild, grilo-plugins-0.2.9.ebuild:
  Update libgcrypt dep to use slot :0.

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> grilo-plugins-0.2.10.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> grilo-plugins-0.2.10.ebuild:
  arch stable, bug 888

*grilo-plugins-0.2.10 (11 Feb 2014)

  11 Feb 2014; Pacho Ramos <pacho@gentoo.org> +grilo-plugins-0.2.10.ebuild,
  -files/grilo-plugins-0.1.18-tracker-0.14.patch, -grilo-plugins-0.1.18.ebuild,