@@ -4,13 +4,13 @@ Hash: SHA256
 DIST grilo-plugins-0.2.12.tar.xz 721592 SHA256 15bed8a633c81b251920ab677d455433e641388f605277ca88e549cc89012b48 SHA512 37865fea88b2927482490481f07d830e6cbd89c886e20b2986931215099bc9b6b46600ac45e0c72c6ff2d8f9e273ca5cd4ad42195436b540118c483d1cb5bd8e WHIRLPOOL 27006aa66002770c55be9c8f9d4302f1b60524096a11ad27731a3fcb57e4e4a55a0be6809808d14c441e4bdc005753fd55657fb9df83c149a420eacc29276c91
 DIST grilo-plugins-0.2.13.tar.xz 999896 SHA256 a5544831ba81a4e7caea30da89874fd20142a362d389366e1113d0e64be51201 SHA512 5ec97ea16fc13c13090d58067bc982176967f49b7f996b2ee75fe2c915bfdaf96fb780730b9aeca3ba1e7d566526b7c7423a238b0285b0f60b97ad66b1cb0e03 WHIRLPOOL ef0cadaf229d02083efe6375db2ef335b88b9f46a29d671713957625868a30294952e538cb280de387d5078823ebd2f6d80ddb76d2ebed81008d53b44d3e62f5
 EBUILD grilo-plugins-0.2.12.ebuild 2447 SHA256 a9ffa2324b5486ae6a698a72b88025d93a4ed92cfe762b1990843f9c678f6ede SHA512 15e7f79a5fc77dca27e463a9d70eaeaffdc80b78162a830191f7265ded509050383eb015e1238025cb6ab33c98be337f72c7b1d6823ea64cfc7188d0d4ff3d3b WHIRLPOOL 246d3506cc80acf0014e4da016473866bc0d023b8cb408d4e04d0c31c7712169c0da58950f764c11140542f779747fad5752231f528b6296593a08536e5e6bcd
-EBUILD grilo-plugins-0.2.13.ebuild 2462 SHA256 80f729b1a367e3188152b982d00cf1d8dc6de0ea840988cc4b2bf736020e03d3 SHA512 15c2be2ec79dd0e27411bc0dc7db2f788cf24662ff9e7bee7046271564ed400b8f170f3f669f19d32eb7c724c670538665021bfb05b7d6a94995873098ee915c WHIRLPOOL 7ad17ec7a7be56bfb2edd76f70abb0f5152aa23c6501ad6d9ef1d5069950fb033166cc202c2baa63f208c1822fdddcc466df224a79af0fa7223cf8586326e17e
-MISC ChangeLog 8812 SHA256 210df0073101a394e08f582ca83797d7bc1a38861f5d36cd01b67cf17a5b69ac SHA512 52486e1c3934f3febd2b6b68836a5bc4dba995bde8ac9931271d484356f184ad7d9782b80ef0d70a4a1f252fcf289336314c04918315f8398482db60a3de6882 WHIRLPOOL 5aa2ebb7678f0b9790dfe98b90aa6e72287673c49e79f53f28c04f3a4747e5bfa54809486b3e51386346b07dd5f383b0a626965197718e7c1642a1195e47c62c
+EBUILD grilo-plugins-0.2.13.ebuild 2461 SHA256 657a346dbafe5639d7235280a4de3d344f4ccff7556d59f85abc2229d8f3ad39 SHA512 a0370c8cf367e939df4c2cf56223be6dc37e786ef6f364e9f95e161b53938d66573610d744ae38dce2a06509b454eb5d6a4acd2b82da0373bb4bbc08439f217e WHIRLPOOL aa3a04b6961e3600f3e6971466b6918fdfca1b2d78a03a6205d36d1543ab4a8c07d3485800c012caeea693d2a8b7edc4a32f13fd80da80d38451c2529138bcb2
+MISC ChangeLog 8913 SHA256 66d6e71c94d4313d329f9b93be540fc706eb06ee9c1aaeab9b35df33c1e0c698 SHA512 9dde6255036f5e2126a58c8c4046be96058c6f363c4eb9c66af3e5e501eb12f1d3936878f2ff2376b4cf3106fcf9f8743e879cf25a5a87b338a62d4b8ee42c8e WHIRLPOOL 8f746afbc65a8ff64603184cfd3bd85748441fc77607f914854e3c110c6e9da8ad44dfdde1ec277cff44b84cf1b538a58e612a34ff5d02048f582a784b3c5f2a
 MISC metadata.xml 974 SHA256 637d4673c440b74ea993f5dfae3b23c3c7a89c2a7511515f809ba98565364a1d SHA512 91a9fb6f4aedcb2c83d21083a80bc234e704b9f698a3fc59c590bde22a7af3db0232bd6461f53276f1bdd99a9a83dca039cbd7c30486280786292161a99b8318 WHIRLPOOL 68542fa251c2ea63443e2aa22c2d0e8f65e420668572d3ed4d5424cbcd773a5c921689657f77abc065d9f708b53fba8f47305bf7ee012ea0cdf4d215d05c9ec4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRgkkkACgkQCaWpQKGI+9SzZQCfXDBXIxgsnrJAxqlEP79e70DW
-/ccAnAoWzLY696nY5LZe8X02IbGugKHX
-=3hl/
+iEYEAREIAAYFAlSS664ACgkQCaWpQKGI+9RTRwCfdIRMwKNg4j/zLwX2VDGyMPBG
+3nUAn1eF9SRLatkOfc6ZinFb/cNTZNEW
+=kNZb
 -----END PGP SIGNATURE-----
