@@ -5,14 +5,14 @@ DIST libnice-0.1.7.tar.gz 827258 SHA256 4ed165aa2203136dce548c7cef735d8becf5d986
 DIST libnice-0.1.8.tar.gz 881186 SHA256 9da7f09909902d535389d929c3e4d69129528fb18438a6c8565ec812d9904ddf SHA512 d573810d34a7ca9a5deddc11efa16e66615375fff50f91b406d8e6aa05486253335c35dfd0061ee68ee1c3ccbf9ea6c27225ad452540777c2e0ca0f7fe79d496 WHIRLPOOL c07d1d9d303e95af8d4d7f4fccd53a5fb07cbfbcb72f4364b6d3fb9be451e97f9ad5cb38f71a8c1a16e69302a6427261c3a1b5628423314ddfe126313b49d799
 EBUILD gst-plugins-libnice-0.1.7-r100.ebuild 1475 SHA256 915d33516f2e3e4bc6de67439bfbe2adf14c66c73c95dc0b4e5fc5c1697f4300 SHA512 8eadf67d0560eab619eb2f1efbcc99dcbb7c1da6e52b6384eeaafdf5c16200de5464360befab3b700319664254c3f2e6f2e4bf4bd023438300d6136492c21a99 WHIRLPOOL 3c54bfbbec01827fa36445d1a47d0652dfea8e7d5d8294e56b0af1fd96ce351218bbd30cc6bb6b312f8cc310a3e05dbbf4e433d43b0e4f6dc1e976773550098e
 EBUILD gst-plugins-libnice-0.1.7.ebuild 1471 SHA256 773c31983318670bcb4c0a7911d6b43b3f5be76c9c8af3d3fb32f57d1bbc7da8 SHA512 ca6a88e8e00e8b597f194e34ac29ff7554364be32ec6c7f9eb693d49b2b09a05e0a206ef846d528e57de75fe311e3061a9f7d70336fb44de2ee3dd1df6705a54 WHIRLPOOL 2d5ae65b48dd382a5f656eae0d9201dbf9bebf8a127dd7d3cc704baeaf2d86a2b038bfa76baf589bda415f75d88b7cad1c6af85f99d9b99d292c60d5598134be
-EBUILD gst-plugins-libnice-0.1.8-r100.ebuild 1507 SHA256 c11d7e0dfd2cb320e2a724cc504432279f6c1b9bf67d149e20530eccf5b818a6 SHA512 e31dfca1e8682011a9f79850c1a5aa7f41c49adc847f72145b74df921e617dcbbaac13ab6565628d34c70a3f1dd475f793529663c28bbd1cb0bfc5479abfb254 WHIRLPOOL a31b20490b45590f6f02c21f0d90c99def74472854f3b0c23a8bde835be40373044cacc99a2e1304de0beea651d86143d0ee2f22db1643792ccd3ac76caf27da
-EBUILD gst-plugins-libnice-0.1.8.ebuild 1503 SHA256 ef5fa6bdd1f19260fe020168fb133a9a7003b4c6b065674cdcc5058c3b505d71 SHA512 e567e301a46c15c407a48345f9790fdc5594960eb99bca4aabf9f77a6aebccb9533d8c2e60af0bb253b022a9ec9e96ab5b9996ff1489fa4325f42b758efd4cdf WHIRLPOOL 00d85d333f6d1cedcf149dd13b2e994425cd52092063e13b2e04c44b88c892a3fb0ea31b60430a449da23dbcd067af46d2df237c9699710af33392fcd8ee7f81
-MISC ChangeLog 7855 SHA256 14611c43d89af723b2d7dcd36be563b0fc78e0bcbfa67a48cd0c59c235fab174 SHA512 2d9c5c0bdf5d08b406842845e1f3412913f449530c83646733f03c7d1eb04227100eb861a900e4ca00534a5f1793f2409b86c39155e6070f96aede32ccb47567 WHIRLPOOL 9035ffc240e844fc643ccddae652549254905536913655b131a8d2bd07962d7ef4b92c4a4587f7f8b3eeae005a521fcf8520f9069d22b7ab00475e38a1537200
+EBUILD gst-plugins-libnice-0.1.8-r100.ebuild 1508 SHA256 625e02d2d8db70822ff648d21394534541fb5c3095f52ba17703362b52dbaa9f SHA512 576dfc0bc50878efaad0f41c3c31459256f654d40e18983162823ed21747eb276b6bdf92256d04d5a63337164c8463b84e417c5e900847b4026f566965ebf61e WHIRLPOOL 6ce9724d5dcd045d28b3c9a58dc5ac1224cc3c7e73e1922aa435a43ea6eac1d8b1761b431b79fdf101a7f4ce20903548fd28ccefc06abd3265719232f00047b9
+EBUILD gst-plugins-libnice-0.1.8.ebuild 1504 SHA256 43dee653125baa1c5c162d1524f12cecc7025ed7d5b98c63468e704e18b87c58 SHA512 89c949b43d37323add466fde5759cb656f5be69bfd524d5f43a1cd8a127bf1ca22acebe6af599e43a01edd28cfe6f89e3e14cad4c20d9c11550ea2227ccd1450 WHIRLPOOL 31d92dea4f5277360f03a63f2819b9e15e0147a6f80a818c9e8b248e3c524781514ec1d41cb56cd9151a6525faa44856baa0c9a1a8f84992c2e39dd369a7d567
+MISC ChangeLog 8004 SHA256 5095d45a9db765b9ef5ddf946813b46a81d8de1415d3ae6a7058fd8836778972 SHA512 efd2a5eaf4acaeb4845c915e00930cfebac201e0abed4c888b71249b1420f88e6ca5dd93f2dab6fd2a6d637d997365ea34739591943d629c3cc9fa10c1adf3c1 WHIRLPOOL 78ffc52ba6d1da30054981cc1deea964b3f6f7c6c3482973fe0dc1f82ae7c7b6048240f9afc03c71884bcee2ea8f8f9aa21357fc5a7fb51f33d3587e2745d065
 MISC metadata.xml 184 SHA256 024e30df6d658d8fd0245d1b05205472624234321924b2bc024f558f1923c492 SHA512 5a2653142a1cb94668474caf75336c48b2feb85e8fd41e18cf441d1bac1f43ca4dfb88d0f87549d8c4f33ec0885f080e627d99abc37ae63827e26e0dd366fdbd WHIRLPOOL cc1cb35bedd7f9847062cebdc4bd2dd348ec1caf039a18b4fc4144b1a655b106b91b0892134e183766ad18f93b9d73ba66ea17b8841875e86b1cd2dcc966d647
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSK2QMACgkQVWmRsqeSphPtlACdE71j4uq0DgiMxhnlfKpH5dN/
-K/wAnjItInps1aMST4+h67WiQNsX4W5R
-=pDhs
+iEYEAREIAAYFAlSS67MACgkQCaWpQKGI+9QPqQCcDkmdqwO2B3iIfbiTzzDHo97T
+QJYAn1j5Nrqj8/m9iQajh0Eeoy/xtNdo
+=s7oj
 -----END PGP SIGNATURE-----
