@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/grilo-plugins
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.44 2014/11/10 10:24:08 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.45 2014/12/18 14:58:53 pacho Exp $
+
+  18 Dec 2014; Pacho Ramos <pacho@gentoo.org> grilo-plugins-0.2.13.ebuild:
+  x86 stable, bug 529964
 
   10 Nov 2014; Pacho Ramos <pacho@gentoo.org> grilo-plugins-0.2.13.ebuild:
   Needs newer grilo (upstream bug #739159)
